tests/rascal/negative/type_errors/L1/15_expression_ES10_D4_100.ob
MODULE Test15;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               r := p;
               y := (- (((- 0) * (z * 2)) DIV z));
               r := q;
               x := z;
  (* error *)  p := (y <= 0);
               r := (((x MOD 200) # 2) & (1223 > (+ 1223)));
               p := (y <= ((x DIV 2) DIV (z + (- 200))));
               q := (~ (x >= 200));
               x := (200 + 200);
               z := (- x)
END Test15.